--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -3,12 +3,13 @@
   border-top: solid 1px rgba(0, 0, 0, 0.4);
   padding-left: 16px;
   padding-top: 24px;
+  margin-top:48px;
 }
 
 .thread-date {
   position: absolute;
   top: -14px;
-  width: 64px;
+  width: 94px;
   height: 28px;
   left: calc(50% - 32px);
   border: solid 1px rgba(0, 0, 0, 0.4);
@@ -27,7 +28,7 @@
   img {
     width: 54px;
     height: 54px;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
 
@@ -74,13 +75,13 @@
   justify-content: space-between;
   min-height: calc(100vh - 200px);
   margin-left: 24px;
-  margin-right: 48px;
-  margin-top:48px;
+ 
+  
 }
 
 .side-thread-cont {
   width: 300px;
-  background-color: rgba(130, 8, 130,0.7);
+  background-color: rgba(130, 8, 130,0.3);
   position: relative;
   padding:12px;
 }
