--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -68,6 +68,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    cursor: pointer;
 
     &:hover {
       .channel-create-icon {
@@ -84,6 +85,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 32px;
+    h4{
+        cursor: pointer;
+    }
   }
 }
 
