--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -1,6 +1,7 @@
 <div class="allThreads">
+  <div class="thread-column">
   <div class="thread-cont" *ngFor="let thread of threads; let i = index">
-    <div class="thread-date">{{ dateOfThreads }}</div>
+    <div class="thread-date">{{ thread.dateOfThread }}</div>
     <div class="thread-content-cont">
       <img src="assets/img/{{ thread.authorPic }}" alt="img of thread-user" />
       <div class="thread-content">
@@ -17,6 +18,7 @@
     </div>
    <!-- <app-text-box class="textbox-channel" #channeltext></app-text-box>-->
   </div>
+</div>
 
 
 
