--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -4,6 +4,14 @@
   padding-left: 16px;
   padding-top: 24px;
   margin-top:48px;
+  width:100%;
+}
+
+.thread-column{
+  display: flex;
+  justify-content: flex-start;
+  align-items:flex-start;
+  flex-direction: column;
 }
 
 .thread-date {
