--- a/src/app/create-direct-message/create-direct-message.component.html
+++ b/src/app/create-direct-message/create-direct-message.component.html
@@ -10,8 +10,8 @@
       </mat-menu>
 </div>
 <div *ngIf="overview">
-<div class="message-box" *ngFor="let message of allMessages" >
-    <div class="message-date">{{message.date}}</div>
+<div class="message-box" *ngFor="let message of allMessages[0]['messages']" >
+    <div class="message-date">{{message.datestring}}</div>
     <div class="message-cont" >
        
         <div class="thread-content-cont">
@@ -20,7 +20,7 @@
             <h3>
                {{message.author}}
             </h3>
-            <div class="thread-text">{{message['message']}}</div>
+            <div class="thread-text">{{message['text']}}</div>
           </div>
         </div>
        
