--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -58,8 +58,8 @@
       </mat-menu>
     </h3>
     <div *ngIf="open2" class="channel-cont">
-    <h4 *ngFor="let chat of loggedUser.userMessages" routerLink="main/:id/userchat/{{chat.author}}">
-      {{ chat['author'] }}
+    <h4 *ngFor="let user of loggedUser.userMassages;let i=index" routerLink="main/:id/userchat/{{ user['author']}}">
+      {{ user['author'] }}
     </h4>
   </div>
   </mat-drawer>
