--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,12 +1,17 @@
 <div class="text-box-container">
 
-    <form class="editorForm" (submit)="x()">
+    <form class="editorForm" (submit)="check()">
 
-        <quill-editor class="content-editor" [placeholder]="'Nachricht an XXX'" [modules]="quillConfiguration">
-
+        <quill-editor 
+        class="content-editor" 
+        [placeholder]="'Nachricht an XXX'" 
+        [modules]="modules"
+        minlength="1"
+        (onEditorChanged)="checkEditor($event)"
+        (onSelectionChanged)="onSelectionChanged($event)">
         </quill-editor>
 
-        <button type="submit" mat-raised-button>
+        <button type="submit" mat-raised-button [disabled]="!valid">
             <mat-icon>send</mat-icon>
           </button>
 
