save Channel Thread without value of textbox on enter

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -76,7 +76,7 @@
 
 
 
-      <app-text-box class="app-text-container"></app-text-box>
+     <!-- <app-text-box class="app-text-container"></app-text-box>-->
 
     </div>
 
