--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -1,7 +1,7 @@
 <div class="allThreads">
   <div class="thread-column">
   <div class="thread-cont" *ngFor="let thread of threads; let i = index">
-    <div class="thread-date" *ngIf="topBoarder">{{ thread.dateOfThread }}   </div>
+    <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'">{{ thread.dateOfThread }}   </div>
     <div class="thread-content-cont">
       <img src="assets/img/{{ thread.authorPic }}" alt="img of thread-user" />
       <div class="thread-content">
@@ -11,13 +11,14 @@
         <div class="thread-text">{{ thread.text }}</div>
       </div>
     </div>
-    <div class="answers" *ngIf="threads[i]['comments']">
+    <div class="answers" *ngIf="!(threads[i]['comments']=='')">
       <img src="assets/img/pinguin.svg" alt="img of answer-user" />
       <a (click)="open(i)">{{threads[i]["comments"].length}}Antwort(en)</a>
       <span>Zeitraum zu letzter Antwort</span>
     </div>
-   <!-- <app-text-box class="textbox-channel" #channeltext></app-text-box>-->
+  
   </div>
+  <app-text-box class="textbox-channel" #channeltext (keyup.enter)="saveMessageToChannel()"></app-text-box>
 </div>
 
 
