--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -69,16 +69,12 @@
     <!-- <button type="button" class="toggle-sidenav" mat-icon-button (click)="drawer.toggle()" mode="open">
       <mat-icon>swap_horiz</mat-icon>
     </button>-->
-    <div class="route-cont">
-      <router-outlet>
+    
+      <router-outlet class="route-cont">
 
       </router-outlet>
 
-
-
-     <!-- <app-text-box class="app-text-container"></app-text-box>-->
-
-    </div>
+    
 
 
   </div>
