--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,20 +1,17 @@
 <div class="text-box-container">
+  <form class="editorForm">
+    <quill-editor
+      class="content-editor"
+      [placeholder]="'Nachricht an XXX'"
+      [modules]="modules"
+      minlength="1"
+      (onEditorChanged)="getEditorInput($event)"
+      (onSelectionChanged)="onSelectionChanged($event)"
+    >
+    </quill-editor>
 
-    <form class="editorForm" (submit)="check()">
-
-        <quill-editor 
-        class="content-editor" 
-        [placeholder]="'Nachricht an XXX'" 
-        [modules]="modules"
-        minlength="1"
-        (onEditorChanged)="checkEditor($event)"
-        (onSelectionChanged)="onSelectionChanged($event)">
-        </quill-editor>
-
-        <button type="submit" mat-raised-button [disabled]="!valid">
-            <mat-icon>send</mat-icon>
-          </button>
-
-    </form>
-
+    <button type="submit" mat-raised-button [disabled]="!valid">
+      <mat-icon>send</mat-icon>
+    </button>
+  </form>
 </div>
