head and sidebar css and html overhaul

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,13 +39,8 @@ body {
 }
 
 .mode-colors {
-    background-color: rgb(77, 2, 77);
+    background-color: #4A154B;
     color: white;
-}
-
-.mode-colors-nav {
-    color: white;
-    background-color: rgba(85, 2, 85, 0.961);
 }
 
 
