--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -72,6 +72,7 @@
 .sign-in-button {
     background-color: #33D375;
     border-radius: 8px;
+    border: unset;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.6);
     cursor: pointer;
     position: absolute;
