--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -119,27 +119,6 @@
 /* SIDEBAR */  
 
 
-
-
-/* ROUTER CONTENT */ 
-
-
-.example-sidenav-content {
+.content {
   height: 100%;
 }
-
-
-.route-cont {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-.app-text-container {
-  width: inherit;
-}
-
-
-/* ROUTER CONTENT */ 
