--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -1,32 +1,51 @@
-.thread-cont {
+.threadPage {
+  height: 100%;
+  width: 100%;
   position: relative;
-  border-top: solid 1px rgba(0, 0, 0, 0.2);
-  padding-left: 16px;
-  padding-top: 24px;
-  margin-top:48px;
-  width:100%;
+
+  // display: flex;
 }
 
-.thread-column{
+
+.threadsAndEditorPosition {
+  height: inherit;
   display: flex;
-  justify-content: flex-start;
-  align-items:flex-start;
   flex-direction: column;
 }
+
+
+.allThreads {
+  height: calc(100% - 172px);
+  overflow: auto;
+  scroll-behavior: smooth;
+}
+
+
+.thread {
+  position: relative;
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+  padding: 16px 32px;
+  margin-block: 16px;
+}
+
 
 .thread-date {
   position: absolute;
   top: -14px;
-  width: 94px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 100px;
   height: 28px;
-  left: calc(50% - 32px);
   border: solid 1px rgba(0, 0, 0, 0.4);
   background-color: white;
-  border-radius: 50%;
+  border-radius: 20px;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 
 .thread-content-cont {
   display: flex;
@@ -40,6 +59,7 @@
   }
 }
 
+
 .thread-content {
   display: flex;
   justify-content: center;
@@ -47,96 +67,104 @@
   align-items: flex-start;
   padding-left: 16px;
   font-size: 18px;
+
   h3 {
-    margin-bottom:5px;
+    margin-bottom: 5px;
     font-size: 14px;
     font-weight: bold;
+
     span {
       margin-left: 24px;
       font-size: 12px;
       font-weight: 300;
     }
   }
-  .thread-text{
+
+  .thread-text {
     font-size: 14px;
   }
 }
+
 
 .answers {
   margin-left: 54px;
   margin-top: 24px;
   display: flex;
+
   img {
     width: 24px;
     height: 24px;
     object-fit: contain;
     border-radius: 25%;
   }
-  a{
-    cursor:pointer;
-    color:blue;
+
+  a {
+    cursor: pointer;
+    color: blue;
   }
 }
 
-.allThreads {
-  display: flex;
-  justify-content: space-between;
-  min-height: calc(100vh - 200px);
-  margin-left: 24px;
-}
+
+
+
+
+
+
+
+
 
 .side-thread-cont {
   width: 300px;
-  background-color: rgba(130, 8, 130,0.3);
+  background-color: rgba(130, 8, 130, 0.3);
   position: relative;
-  padding:12px;
+  padding: 12px;
 }
 
-.close-btn{
-position: absolute;
-top:6px;
-right:6px;
+
+.close-btn {
+  position: absolute;
+  top: 6px;
+  right: 6px;
 }
+
 
 .comment-cont {
   display: flex;
   justify-content: flex-start;
- margin-top: 16px;
+  margin-top: 16px;
   align-items: flex-start;
   padding-left: 16px;
   font-size: 18px;
   width: 250px;
+
   h2 {
     font-size: 14px;
-   }
-   p {
-    
+  }
+
+  p {
     font-size: 14px;
   }
 }
 
-.opend-comment{
-  margin-left:10px;
+
+.opend-comment {
+  margin-left: 10px;
 }
 
-.w250{
-width:250px;
+
+.w250 {
+  width: 250px;
 }
 
-.w60{
+
+.w60 {
   width: 60%;
 }
 
-.bg-gray{
+
+.bg-gray {
   background-color: aliceblue;
   border-radius: 10px;
-  border:solid 1px rgba(0, 0, 0, 0.4);
+  border: solid 1px rgba(0, 0, 0, 0.4);
   padding: 16px;
 }
-
-.textbox-channel{
-  position: absolute;
-  bottom:10px;
-  left:10px;
-}
-
