text box works on second enter (little bug)

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -76,7 +76,7 @@
     border-top: solid 1px #6E446F;
     border-bottom: solid 1px #6E446F;
     margin: 0px;
-    padding: 10px 16px;
+    padding-inline:16px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
