--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -1,68 +1,107 @@
 <div class="threadPage">
 
-  <div class="threadsAndEditorPosition">
+  <div class="threadsAndEditorPosition" [ngStyle]="{'width': openSide ? 'calc(100% - 300px)' : ''}">
 
-    <div class="allThreads" *ngIf="threads.length>0">
+    <!-- Kommentar von Steven: Ich denke nicht dass wir hier *ngIf thread.lenght > 0 brauchen -->
+    <div class="allThreads">
 
       <div class="thread" *ngFor="let thread of threads; let i = index">
-  
+
         <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'">
           {{ thread.dateOfThread }}
         </div>
-  
+
         <div class="thread-content-cont">
           <img src="assets/img/{{ thread.authorPic }}" alt="img of thread-user" />
           <div class="thread-content">
             <h3>
               {{ thread.author }}<span>{{ thread.datestring }}</span>
             </h3>
-            <div class="thread-text">{{ thread.text }}</div>
+            <div class="thread-text" id="threadNr{{i}}"></div>
           </div>
         </div>
-  
+
         <div class="answers" *ngIf="(threads[i]['comments'] !== undefined && threads[i]['comments'].length>0)">
           <img src="assets/img/pinguin.svg" alt="img of answer-user" />
           <a (click)="open(i)">{{ threads[i]["comments"].length }}Antwort(en)</a>
           <span>Zeitraum zu letzter Antwort</span>
         </div>
-  
+
       </div>
-  
+
     </div>
-  
+
     <app-text-box #channeltext (keyup.enter)="saveMessageToChannel()"></app-text-box>
 
   </div>
 
 
-  <!-- <div class="side-thread-cont" *ngIf="openSide">
 
-    <button class="close-btn" mat-button (click)="openSide = false">X</button>
-    <h1># {{ channel["name"] }}</h1>
 
-    <div class="selected-thread-cont w250">
 
-      <div class="thread-content-cont bg-gray">
-        <img src="assets/img/{{ threads[activThreadId].authorPic }}" alt="img of thread-user" />
-        <div class="thread-content w60">
-          <h3>
-            {{ threads[activThreadId].author
-            }}<span>{{ threads[activThreadId].datestring }}</span>
-          </h3>
-          <div class="thread-text">{{ threads[activThreadId].text }}</div>
-        </div>
+
+
+
+
+
+
+
+  <div class="thread-position" [ngStyle]="{'right': openSide ? '0px' : ''}">
+
+    <div *ngIf="openSide" class="thread-content-position">
+
+      <div class="thread-comment-header">
+
+        <h1># {{ channel["name"] }}</h1>
+        <button mat-button (click)="openSide = false">X</button>
+
       </div>
 
-      <div class="comment-cont" *ngFor="let comment of threads[activThreadId]['comments']">
-        <img src="threads[activThreadId].comments.authorPic" />
-        <div class="opend-comment bg-gray">
-          <h2>{{ comment["author"] }}</h2>
-          <p>{{ comment["comment"] }}</p>
+
+      <div class="open-thread-comments">
+
+        <div class="comment" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
+
+          <img src="assets/img/{{ threads[activThreadId].authorPic }}" alt="img of thread-user" />
+
+          <div class="thread-content w60">
+  
+            <h3>
+              {{ threads[activThreadId].author
+              }}<span>{{ threads[activThreadId].datestring }}</span>
+            </h3>
+  
+            <span class="thread-text">
+              {{ threads[activThreadId].text }}
+            </span>
+  
+          </div>
+
         </div>
+
+        <div class="comment" *ngFor="let comment of threads[activThreadId]['comments']">
+
+          <img src="threads[activThreadId].comments.authorPic" />
+
+          <div class="thread-content">
+
+            <h3>{{ comment["author"] }}</h3>
+            <span class="thread-text">{{ comment["comment"] }}</span>
+
+          </div>
+        </div>
+
+
       </div>
+
+
+
+
+      <app-text-box></app-text-box>
+
+
+
 
     </div>
-
-  </div> -->
-
+  </div>
 </div>
