--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -2,15 +2,17 @@
   height: 100%;
   width: 100%;
   position: relative;
-
-  // display: flex;
+  overflow: hidden;
+  display: flex;
 }
 
 
 .threadsAndEditorPosition {
   height: inherit;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  transition: 75ms ease-in-out;
 }
 
 
@@ -106,65 +108,58 @@
 
 
 
-
-
-
-
-
-
-
-.side-thread-cont {
+.thread-position {
   width: 300px;
-  background-color: rgba(130, 8, 130, 0.3);
-  position: relative;
-  padding: 12px;
-}
-
-
-.close-btn {
+  background-color: white;
   position: absolute;
-  top: 6px;
-  right: 6px;
+  top: 0px;
+  right: -300px;
+  bottom: 0px;
+  transition: 75ms ease-in-out;
 }
 
 
-.comment-cont {
+.thread-content-position {
+  height: 100%;
   display: flex;
-  justify-content: flex-start;
-  margin-top: 16px;
-  align-items: flex-start;
-  padding-left: 16px;
-  font-size: 18px;
-  width: 250px;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  h2 {
-    font-size: 14px;
+.thread-comment-header {
+
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 16px;
+  border-block: solid 1px rgba(0, 0, 0, 0.1);
+
+  h1 {
+    margin: 0px;
   }
 
-  p {
-    font-size: 14px;
+}
+
+.open-thread-comments {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow: auto;
+  padding-inline: 16px;
+}
+
+.comment {
+  display: flex;
+  padding-block: 16px;
+
+  img {
+    width: 32px;
+    height: 32px;
   }
-}
 
-
-.opend-comment {
-  margin-left: 10px;
-}
-
-
-.w250 {
-  width: 250px;
-}
-
-
-.w60 {
-  width: 60%;
-}
-
-
-.bg-gray {
-  background-color: aliceblue;
-  border-radius: 10px;
-  border: solid 1px rgba(0, 0, 0, 0.4);
-  padding: 16px;
+  div {
+    display: flex;
+    flex-direction: column;
+  }
 }
