thread-text saved andisplayed from text box

--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -17,7 +17,7 @@
             <h3>
               {{ thread.author }}<span>{{ thread.datestring }}</span>
             </h3>
-            <div class="thread-text" id="threadNr{{i}}"></div>
+            <div class="thread-text" id="threadNr{{i}}" [innerHTML]="thread.text"></div>
           </div>
         </div>
 
