--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -85,7 +85,7 @@
           <!-- *ngIf="threads[activThreadId]['comments'] !== undefined && threads[activThreadId]['comments']>0" -->
 
           <div *ngIf="threads[activThreadId]['comments'] !== undefined && threads[activThreadId]['comments'].length>0">
-            <img src="threads[activThreadId].comments.authorPic" />
+           <!-- <img src="threads[activThreadId].comments.authorPic" />-->
 
             <div class="thread-content">
 
