--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -93,10 +93,10 @@
 
     <div *ngIf="open2" class="channel-cont">
 
-      <h4 *ngFor="let user of loggedUser.userMassages;let i=index" routerLink="main/:id/userchat/{{ user['author']}}"
-        [ngStyle]="{'background-color': (openContent == user['author']) ? '#0462A6' : ''}"
-        (click)="changeOpenContent(user['author'])">
-        {{ user['author'] }}
+      <h4 *ngFor="let partner of loggedUser.chatpartner;let i=index" routerLink="main/:id/userchat/{{ partner}}"
+        [ngStyle]="{'background-color': (openContent == partner) ? '#0462A6' : ''}"
+        (click)="changeOpenContent(partner)">
+        {{ partner }}
       </h4>
 
     </div>
