--- a/src/app/create-direct-message/create-direct-message.component.html
+++ b/src/app/create-direct-message/create-direct-message.component.html
@@ -20,7 +20,7 @@
             <h3>
                {{message.author}}
             </h3>
-            <div class="thread-text">{{message['text']}}</div>
+            <div class="thread-text" [innerHTML]="message['text']"></div>
           </div>
         </div>
        
