--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -24,7 +24,7 @@
         <div class="answers" *ngIf="(threads[i]['comments'] !== undefined && threads[i]['comments'].length>0)">
           <img src="assets/img/pinguin.svg" alt="img of answer-user" />
           <a (click)="open(i)">{{ threads[i]["comments"].length }}Antwort(en)</a>
-          <span>Zeitraum zu letzter Antwort</span>
+         <!-- <span>Zeitraum zu letzter Antwort</span>-->
         </div>
 
       </div>
