--- a/src/app/create-direct-message/create-direct-message.component.html
+++ b/src/app/create-direct-message/create-direct-message.component.html
@@ -1,5 +1,6 @@
 
 <div class="direct-mess-cont">
+<div class="top-direct-cont"> 
 <h1>Direktnachrichten</h1>
 <div class="input-cont">
     <span>An:</span>
@@ -9,13 +10,15 @@
         <button *ngFor="let user of users;let i=index" mat-menu-item (click)="writeContact(user.email)" >{{user.email}} </button>
       </mat-menu>
 </div>
-<div *ngIf="overview">
+</div> 
+
+<div class="all-Messages-cont" *ngIf="overview">
 <div class="message-box" *ngFor="let message of allMessages" >
     <div class="message-date">{{message.datestring}}</div>
     <div class="message-cont" >
        
         <div class="thread-content-cont">
-          <img src="assets/img/pinguin.svg" alt="img of thread-user" />
+          <img src="assets/img/{{getPictureOfAuthor(message)}}" alt="img of thread-user" />
           <div class="thread-content">
             <h3>
                {{message.author}}
@@ -28,8 +31,7 @@
       </div>
 </div>
 </div>
-<div class="write-cont" *ngIf="!overview">
-    <button class="close-btn" mat-button (click)="closeWrite()">X</button>
+<div class="write-cont">
     <app-text-box #messagetext  (keyup.enter)="saveMessage()"></app-text-box>
 
 </div>
