--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,15 +1,14 @@
 <div class="text-box-container">
 
-  <form class="editorForm">
+  <form class="editorForm" (submit)="saveMessageToParent()">
 
     <quill-editor
       class="content-editor"
       [placeholder]="'Nachricht an XXX'"
-      [modules]="modules"
+      [modules]="configuration"
       minlength="1"
       (onEditorChanged)="getEditorInput($event)"
       (onSelectionChanged)="onSelectionChanged($event)"
-      
     >
     </quill-editor>
 
