--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -31,10 +31,10 @@
 
     </div>
 
-    <app-text-box (myEvent)="saveMessageToChannel()" #channeltext (keyup.enter)="saveMessageToChannel()"></app-text-box>
+    <app-text-box (myEvent)="saveMessageToChannel()" #channeltext></app-text-box>
 
   </div>
-
+  <!-- (keyup.enter)="saveMessageToChannel()" -->
 
 
 
@@ -102,7 +102,7 @@
 
 
 
-      <app-text-box (myEvent)="saveMessageToThread()" #commenttext (keyup.enter)="saveMessageToThread()"></app-text-box>
+      <app-text-box (myEvent)="saveMessageToThread()" #commenttext></app-text-box>
 
 
 
