--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -7,6 +7,7 @@
       [placeholder]="'Nachricht an XXX'"
       [modules]="configuration"
       minlength="1"
+      (keydown)="onKeyDown($event)"
       (onEditorChanged)="getEditorInput($event)"
       (onSelectionChanged)="onSelectionChanged($event)"
     >
