--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -1,39 +1,40 @@
 <div class="threadPage">
 
-  <div class="threadsAndEditorPosition" [ngStyle]="{'width': openSide ? 'calc(100% - 300px)' : ''}">
+    <div class="threadsAndEditorPosition" [ngStyle]="{'width': openSide ? 'calc(100% - 300px)' : ''}">
 
-    <!-- Kommentar von Steven: Ich denke nicht dass wir hier *ngIf thread.lenght > 0 brauchen -->
-    <div class="allThreads">
+        <!-- Kommentar von Steven: Ich denke nicht dass wir hier *ngIf thread.lenght > 0 brauchen -->
+        <div class="allThreads">
 
-      <div class="thread" *ngFor="let thread of threads; let i = index">
+            <div class="thread" *ngFor="let thread of threads; let i = index">
 
-        <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'">
-          {{ thread.dateOfThread }}
+                <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'">
+                    {{ thread.dateOfThread }}
+                </div>
+
+                <div class="thread-content-cont" (click)="open(i)">
+                    <img src="assets/img/{{ thread.authorPic }}" alt="img of thread-user" />
+                    <div class="thread-content">
+                        <h3>
+                            {{ thread.author }}<span>{{ thread.datestring }}</span>
+                        </h3>
+                        <div class="thread-text" id="threadNr{{i}}" [innerHTML]="thread.text"></div>
+                    </div>
+                </div>
+
+                <div class="answers" *ngIf="(threads[i]['comments'] !== undefined && threads[i]['comments'].length>0)">
+                    <img src="assets/img/pinguin.svg" alt="img of answer-user" />
+                    <a (click)="open(i)">{{ threads[i]["comments"].length }}Antwort(en)</a>
+                    <span>Zeitraum zu letzter Antwort</span>
+                </div>
+
+            </div>
+
         </div>
 
-        <div class="thread-content-cont" (click)="open(i)">
-          <img src="assets/img/{{ thread.authorPic }}" alt="img of thread-user" />
-          <div class="thread-content">
-            <h3>
-              {{ thread.author }}<span>{{ thread.datestring }}</span>
-            </h3>
-            <div class="thread-text" id="threadNr{{i}}" [innerHTML]="thread.text"></div>
-          </div>
-        </div>
-
-        <div class="answers"  *ngIf="(threads[i]['comments'] !== undefined && threads[i]['comments'].length>0)">
-          <img src="assets/img/pinguin.svg" alt="img of answer-user" />
-          <a (click)="open(i)">{{ threads[i]["comments"].length }}Antwort(en)</a>
-          <span>Zeitraum zu letzter Antwort</span>
-        </div>
-
-      </div>
+        <app-text-box #channeltext (keyup.enter)="saveMessageToChannel()"></app-text-box>
 
     </div>
 
-    <app-text-box #channeltext (keyup.enter)="saveMessageToChannel()"></app-text-box>
-
-  </div>
 
 
 
@@ -45,64 +46,63 @@
 
 
 
+    <div class="thread-position" [ngStyle]="{'right': openSide ? '0px' : ''}">
 
-  <div class="thread-position" [ngStyle]="{'right': openSide ? '0px' : ''}">
+        <div *ngIf="openSide" class="thread-content-position">
 
-    <div *ngIf="openSide" class="thread-content-position">
+            <div class="thread-comment-header">
 
-      <div class="thread-comment-header">
+                <h1># {{ channel["name"] }}</h1>
+                <button mat-button (click)="openSide = false">X</button>
 
-        <h1># {{ channel["name"] }}</h1>
-        <button mat-button (click)="openSide = false">X</button>
-
-      </div>
+            </div>
 
 
-      <div class="open-thread-comments">
+            <div class="open-thread-comments">
 
-        <div class="comment" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
+                <div class="comment" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
 
-          <img src="assets/img/{{ threads[activThreadId].authorPic }}" alt="img of thread-user" />
+                    <img src="assets/img/{{ threads[activThreadId].authorPic }}" alt="img of thread-user" />
 
-          <div class="thread-content w60">
-  
-            <h3>
-              {{ threads[activThreadId].author
-              }}<span>{{ threads[activThreadId].datestring }}</span>
-            </h3>
-  
-            <span class="thread-text" [innerHTML]="threads[activThreadId].text">
+                    <div class="thread-content w60">
+
+                        <h3>
+                            {{ threads[activThreadId].author }}
+                            <span>{{ threads[activThreadId].datestring }}</span>
+                        </h3>
+
+                        <span class="thread-text" [innerHTML]="threads[activThreadId].text">
               
             </span>
-  
-          </div>
+
+                    </div>
+
+                </div>
+
+                <div class="comment" *ngFor="let comment of threads[activThreadId]['comments']">
+                    <div *ngIf="threads[activThreadId]['comments'] !== undefined && threads[activThreadId]['comments']>0">
+                        <img src="threads[activThreadId].comments.authorPic" />
+
+                        <div class="thread-content">
+
+                            <h3>{{ comment["author"] }}</h3>
+                            <span class="thread-text" [innerHTML]="comment['comment']"></span>
+
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+            <app-text-box #commenttext (keyup.enter)="saveMessageToThread()"></app-text-box>
+
+
+
 
         </div>
-        
-        <div class="comment" *ngFor="let comment of threads[activThreadId]['comments']">
-        <div *ngIf="threads[activThreadId]['comments'] !== undefined && threads[activThreadId]['comments']>0">
-          <img src="threads[activThreadId].comments.authorPic" />
-
-          <div class="thread-content">
-
-            <h3>{{ comment["author"] }}</h3>
-            <span class="thread-text" [innerHTML]="comment['comment']"></span>
-
-          </div>
-        </div>
-        </div>
-
-
-      </div>
-
-
-
-
-      <app-text-box #commenttext (keyup.enter)="saveMessageToThread()"></app-text-box>
-
-
-
-
     </div>
-  </div>
 </div>
