--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
     <h1>Slack_Clone</h1>
 
     <div class="search-field">
-        <input placeholder="Search">
+        <input placeholder="Search" type="search" #search (keyup)="filter(search.value)">
     </div>
 
     <button mat-icon-button class="center" [matMenuTriggerFor]="logoff">
@@ -71,37 +71,33 @@
         <mat-icon *ngIf="!open2">arrow_right </mat-icon>
         <mat-icon *ngIf="open2">arrow_drop_down</mat-icon>
 
-      </button>
+      </button> Chats
 
-      Chats
-
-      <button mat-button [matMenuTriggerFor]="menu2">
+            <button mat-button [matMenuTriggerFor]="menu2">
 
         <mat-icon class="channel-create-icon">expand_more</mat-icon>
 
       </button>
 
-      <mat-menu #menu2="matMenu">
+            <mat-menu #menu2="matMenu">
 
-        <button mat-menu-item routerLink="main/:id/userchat">
+                <button mat-menu-item routerLink="main/:id/userchat">
           New Chat
         </button>
 
-      </mat-menu>
+            </mat-menu>
 
-    </h3>
+        </h3>
 
-    <div *ngIf="open2" class="channel-cont">
+        <div *ngIf="open2" class="channel-cont">
 
-      <h4 *ngFor="let partner of loggedUser.chatpartner;let i=index" routerLink="main/:id/userchat/{{ partner}}"
-        [ngStyle]="{'background-color': (openContent == partner) ? '#0462A6' : ''}"
-        (click)="changeOpenContent(partner)">
-        {{ partner }}
-      </h4>
+            <h4 *ngFor="let partner of loggedUser.chatpartner;let i=index" routerLink="main/:id/userchat/{{ partner}}" [ngStyle]="{'background-color': (openContent == partner) ? '#0462A6' : ''}" (click)="changeOpenContent(partner)">
+                {{ partner }}
+            </h4>
 
-    </div>
+        </div>
 
-  </mat-drawer>
+    </mat-drawer>
 
     <div class="content">
 
@@ -109,8 +105,13 @@
       <mat-icon>swap_horiz</mat-icon>
     </button> -->
 
-    <router-outlet></router-outlet>
-
-  </div>
+        <router-outlet></router-outlet>
+        <div id="filtered-channels">
+            <div class="channel" *ngFor="let channel of filteredChannels">
+                <h2>{{ channel.name }}</h2>
+                <p>{{ channel.threads }}</p>
+            </div>
+        </div>
+    </div>
 
 </mat-drawer-container>
